# goph420-w2025-mt2-stSP

./: .gitignore  README.md  pyproject.toml
data/: Question_2_DATA_rho_vp.txt
main/: rho_vp_driver.py
src/question2/: regression.py
